Can write words to a line

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <title>Editor</title>
   </head>
   <body>
-    <canvas width="1200" height="800" id="canvas"></canvas>
+    <canvas width="1200px" height="800px" id="canvas"></canvas>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script type="module" src="/dist/index.js"></script>
   </body>
